--- a/includes/index.html
+++ b/includes/index.html
@@ -45,8 +45,21 @@
 						<p style="font-family: 'Permanent Marker', cursive;">
 						 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam fermentum, neque eget consectetur dignissim, mi 		font-family: 'Permanent Marker', cursive;quam consectetur tortor, sed hendrerit lorem sem in nunc. Sed eu nunc nec neque tempor volutpat. Cras malesuada luctus sem id vulputate. Quisque ultricies elit eget velit tempus pellentesque. Vivamus risus orci, eleifend non tempus a, sollicitudin nec neque. Aenean venenatis non nunc non porta. Ut metus ipsum, auctor sed turpis id, bibendum volutpat ipsum. Maecenas sed tortor vitae neque hendrerit ultricies. Aliquam elementum dui eu risus pretium, at euismod mi egestas. Proin quis augue sollicitudin, ullamcorper elit sit amet, semper diam. Vivamus non elit dui. Nunc sit amet dolor eget orci rutrum tristique quis eget sapien. Suspendisse ac nibh in ligula scelerisque pretium eget nec erat. Morbi vel varius mi. Praesent porta venenatis consequat.	
 						</p>
+
+						<br>
+						<center>
+							<img src="logo.png" style="width: 250px; height: 250px;">
+						</center>
 				</div>
 			</center>
+		</section>
+
+		<section id="projects">
+			<center>
+				<div class="main_projects">
+					<h1>Projects</h1>
+				</div>
+		</center>
 		</section>
 	</body>
 </html>
