--- a/includes/style.css
+++ b/includes/style.css
@@ -69,3 +69,21 @@ html {
 	text-align: center;
 	font-size: 40px;
 }
+
+.main_projects h1 {
+	font-family: 'Permanent Marker', cursive;
+	text-align: center;
+	font-size: 40px;
+}
+
+.main_projects {
+	width: 75%;
+	text-align: left;
+	padding: 15px;
+	color: #000;
+}
+
+#projects {
+	width: 100%;
+	background-color: #CCC;
+}
